--- a/.github/workflows/sync-dictionary.yml
+++ b/.github/workflows/sync-dictionary.yml
@@ -19,6 +19,10 @@ jobs:
   sync-dictionary:
     runs-on: ubuntu-latest
     
+    # Give the workflow permission to write to the repo
+    permissions:
+      contents: write
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -58,11 +62,14 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "Dictionary Sync Bot"
           
-          # Only commit if the file changed
-          if git diff --quiet formatted_dictionary.md; then
+          # Add the file (even if it's new)
+          git add formatted_dictionary.md
+          
+          # Check if there are any changes to commit
+          if git diff --cached --quiet; then
             echo "No changes to dictionary markdown"
           else
-            git add formatted_dictionary.md
             git commit -m "Auto-update Ichrolic dictionary markdown [skip ci]"
             git push
+            echo "Dictionary updated and pushed!"
           fi
